--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,6 @@ staticfiles/*
 logs/*
 .idea/*
 
-
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
@@ -36,6 +35,7 @@ dist/
 downloads/
 eggs/
 .eggs/
+lib/
 lib64/
 parts/
 sdist/
@@ -136,7 +136,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env*
+.env
 .venv
 env/
 venv/
