--- a/deploy/txt/requirements.txt
+++ b/deploy/txt/requirements.txt
@@ -1,5 +1,5 @@
 arabic-reshaper==2.1.3
-asgiref==3.5.2
+asgiref==3.8.1
 asn1crypto==1.5.1
 Brotli==1.0.9
 certifi==2022.9.14
@@ -11,18 +11,25 @@ cryptography==38.0.1
 cssselect2==0.6.0
 Django==4.0.2
 django-cleanup==6.0.0
+django-cors-headers==4.3.1
 django-crum==0.7.9
 django-environ==0.9.0
+django-filter==24.2
 django-tenants==3.5.0
 django-user-agents==0.4.0
 django-widget-tweaks==1.4.12
 django-xhtml2pdf==0.0.4
+djangorestframework==3.15.1
+djangorestframework-simplejwt==5.3.1
+drf-yasg==1.21.7
 et-xmlfile==1.1.0
 fonttools==4.33.3
 future==0.18.2
 gunicorn==21.2.0
 html5lib==1.1
 idna==3.4
+inflection==0.5.1
+install==1.3.5
 lxml==4.9.1
 openpyxl==3.0.9
 oscrypto==1.3.0
@@ -33,6 +40,7 @@ pycparser==2.21
 pydyf==0.3.0
 pyHanko==0.14.0
 pyhanko-certvalidator==0.19.5
+PyJWT==2.8.0
 PyPDF3==1.0.6
 pyphen==0.12.0
 python-barcode==0.14.0
@@ -49,9 +57,11 @@ suds==1.1.2
 svglib==1.4.1
 tinycss2==1.1.1
 tqdm==4.64.1
+typing_extensions==4.12.0
 tzdata==2022.1
 tzlocal==4.2
 ua-parser==0.10.0
+uritemplate==4.1.1
 uritools==4.0.0
 urllib3==1.26.12
 user-agents==2.2.0
